--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <header>
-    <img src="c:\Users\hp\Downloads\Picsart_24-04-24_13-21-47-902.jpg" alt="Yuvaraj Nagireddi">
+    <img src="Picsart_24-04-24_13-21-47-902.jpg" alt="Yuvaraj Nagireddi">
     <h1>Yuvaraj Nagireddi</h1>
     <p>Aspiring Data Scientist & Machine Learning Engineer</p>
     <div class="contact">
