--- a/index.html
+++ b/index.html
@@ -4,18 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Yuvaraj Nagireddi | Portfolio</title>
+  <link rel="icon" href="favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Roboto', 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #eaf4f4;
-      color: #222;
+      background-color: #fefefe;
+      color: #2a2a2a;
+      line-height: 1.6;
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #333;
+      display: flex;
+      justify-content: center;
+      padding: 1rem 0;
+      z-index: 1000;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    nav a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 1.2rem;
+      font-weight: 500;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #f4a261;
     }
     header {
-      background-color: #023e8a;
+      background-color: #444;
       color: white;
-      padding: 2rem 1rem;
+      padding: 6rem 1rem 2rem;
       text-align: center;
     }
     header img {
@@ -24,114 +49,175 @@
       height: 150px;
       margin-bottom: 1rem;
       border: 4px solid white;
+      object-fit: cover;
     }
     section {
-      padding: 2rem;
+      padding: 3rem 1rem;
       max-width: 900px;
       margin: auto;
     }
     h2 {
-      color: #0096c7;
-      border-bottom: 2px solid #ccc;
+      color: #e76f51;
+      border-bottom: 2px solid #e9c46a;
       padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+      font-weight: 700;
+      font-size: 1.8rem;
     }
     ul {
       padding-left: 1.2rem;
+      list-style-type: disc;
+    }
+    .contact {
+      margin-top: 0.5rem;
+      flex-wrap: wrap;
     }
     .contact a {
-      color: #0077b6;
+      color: #f4a261;
       text-decoration: none;
       margin: 0 0.5rem;
+      font-weight: 500;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.3rem;
+      transition: color 0.3s ease;
     }
     .contact a:hover {
+      color: #e76f51;
       text-decoration: underline;
     }
     footer {
       text-align: center;
-      padding: 1rem;
-      background-color: #caf0f8;
-      color: #023e8a;
+      padding: 1.5rem;
+      background-color: #eee;
+      color: #444;
       font-size: 0.9rem;
+      margin-top: 3rem;
+    }
+    .icon {
+      width: 16px;
+      height: 16px;
+      fill: currentColor;
+    }
+    @media (max-width: 600px) {
+      nav {
+        flex-wrap: wrap;
+        padding: 0.5rem 0;
+      }
+      nav a {
+        margin: 0.3rem 0.8rem;
+        font-size: 0.9rem;
+      }
+      section {
+        padding: 2rem 1rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
+
+  <nav>
+    <a href="#professional-summary">Summary</a>
+    <a href="#education">Education</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#experience">Experience</a>
+    <a href="#certifications">Certifications</a>
+    <a href="#positions">Roles</a>
+    <a href="#interests">Languages & Interests</a>
+  </nav>
+
   <header>
     <img src="Picsart_24-04-24_13-21-47-902.jpg" alt="Yuvaraj Nagireddi">
     <h1>Yuvaraj Nagireddi</h1>
     <p>Aspiring Data Scientist & Machine Learning Engineer</p>
     <div class="contact">
-      <a href="mailto:yuvarajnagireddi@gmail.com">Email</a>|
-      <a href="https://linkedin.com/in/yuvaraj-nagireddi-15b453347" target="_blank">LinkedIn</a>|
+      <a href="mailto:yuvarajnagireddi@gmail.com">yuvarajnagireddi@gmail.com</a> |
+      <a href="https://linkedin.com/in/yuvaraj-nagireddi-15b453347" target="_blank">LinkedIn</a> |
       <a href="https://github.com/Yuvis7" target="_blank">GitHub</a>
     </div>
+    <p>Visakhapatnam, Andhra Pradesh, India | (+91) 89786 36492</p>
   </header>
 
-  <section>
+  <section id="professional-summary">
     <h2>Professional Summary</h2>
-    <p>Quick-learning and analytical Computer Science graduate specialized in AI & ML with strong skills in data analysis, computer vision, and backend development. Passionate about delivering intelligent systems that provide insights and automation.</p>
+    <p>Aspiring Data Scientist and Machine Learning Engineer with strong analytical and problem-solving skills. Holds a B.Tech in AI and ML with hands-on experience in data analysis, computer vision, and web development. Passionate about building intelligent systems that drive insights and automation. Quick learner and collaborative team player, eager to apply machine learning to real-world challenges.</p>
   </section>
 
-  <section>
+  <section id="education">
     <h2>Education</h2>
     <ul>
-      <li><strong>B.Tech in CSE (AI & ML)</strong>, Avanthi Institute of Eng. & Tech (2020–2024) – CGPA: 7.0</li>
-      <li>Intermediate (MPC), Sri Chaitanya Junior College – CGPA: 8.03</li>
-      <li>10th, Sri Chaitanya Techno School – CGPA: 9.8</li>
+      <li>B.Tech in CSE (AI & ML), Avanthi Institute of Engineering and Technology (2020–2024), CGPA: 7.0/10</li>
+      <li>Intermediate (MPC), Sri Chaitanya Junior College (2018–2020), CGPA: 8.03/10</li>
+      <li>SSC, Sri Chaitanya Techno School (2017–2018), CGPA: 9.8/10</li>
     </ul>
   </section>
 
-  <section>
-    <h2>Technical Skills</h2>
+  <section id="skills">
+    <h2>Skills</h2>
     <ul>
-      <li><strong>Languages:</strong> Python, Java, C, SQL</li>
-      <li><strong>Libraries & Tools:</strong> Pandas, NumPy, Scikit-learn, OpenCV, TensorFlow, Power BI, MS Excel</li>
-      <li><strong>Web Dev:</strong> HTML, CSS, JavaScript, Flask</li>
-      <li><strong>Other Tools:</strong> Git, VS Code, Jupyter</li>
+      <li><strong>Programming:</strong> Python, Java, C, SQL</li>
+      <li><strong>Data Science:</strong> Pandas, NumPy, Scikit-learn, Power BI, MS Excel</li>
+      <li><strong>Frameworks:</strong> OpenCV, TensorFlow, Seaborn, Matplotlib, NLTK</li>
+      <li><strong>Web:</strong> HTML, CSS, JavaScript, Flask</li>
+      <li><strong>Tools:</strong> Git, VS Code, Jupyter</li>
+      <li><strong>Soft Skills:</strong> Communication, Problem Solving, Time Management, Presentation</li>
     </ul>
   </section>
 
-  <section>
+  <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li><strong>Emotion-based Music/Video Recommendation System</strong> – CNN, Flask, YouTube & Spotify API integration</li>
-      <li><strong>SMS Spam Detection App</strong> – Naive Bayes, NLTK, Flask</li>
-      <li><strong>Movie Recommendation System</strong> – Cosine Similarity, Pandas</li>
+      <li><strong>Emotion-based Music & Video Recommendation System:</strong> Used CNN with OpenCV and TensorFlow to detect facial expressions, integrated YouTube and Spotify APIs for recommendations.</li>
+      <li><strong>SMS Spam Detection Web App:</strong> Built with Flask and NLTK using a Naive Bayes classifier; includes real-time user interface.</li>
+      <li><strong>Movie Recommendation System:</strong> Built with Pandas using content-based and collaborative filtering, using cosine similarity.</li>
     </ul>
   </section>
 
-  <section>
+  <section id="experience">
     <h2>Experience</h2>
     <ul>
-      <li><strong>Data Analyst Intern</strong>, Fluentgrid Ltd (Sept–Nov 2023)</li>
+      <li><strong>Data Analyst Intern</strong> — Fluentgrid Limited (Sept 2023 – Nov 2023)</li>
       <ul>
-        <li>Built SQL queries and Power BI dashboards</li>
-        <li>Developed ML classification models</li>
-        <li>Contributed to desktop app for data automation</li>
+        <li>Designed optimized SQL queries for insights from utility data.</li>
+        <li>Built ML models and deployed Power BI dashboards.</li>
+        <li>Contributed to a desktop data entry automation tool.</li>
       </ul>
     </ul>
   </section>
 
-  <section>
+  <section id="certifications">
     <h2>Certifications</h2>
     <ul>
-      <li>AWS Academy ML Certificate (2023)</li>
-      <li>Machine Learning – EduSkills</li>
-      <li>Java Programming – Kodnest</li>
-      <li>Power BI Essentials – Coursera (2024, ongoing)</li>
+      <li>AWS Academy Machine Learning Certificate (2023)</li>
+      <li>Machine Learning — EduSkills (2023)</li>
+      <li>Java Programming — Kodnest Technologies (2023)</li>
+      <li>Power BI Essentials — Coursera (Ongoing, 2024)</li>
     </ul>
   </section>
 
-  <section>
+  <section id="positions">
+    <h2>Positions of Responsibility</h2>
+    <ul>
+      <li><strong>Team Lead</strong> — Final Year Project (2023 – Present): Led a 3-member team in building an emotion recognition system; managed timelines and documentation.</li>
+      <li><strong>Class Representative</strong> (2021 – 2023): Liaison between faculty and 60+ students; organized seminars and peer coding groups.</li>
+    </ul>
+  </section>
+
+  <section id="interests">
     <h2>Languages & Interests</h2>
     <ul>
       <li><strong>Languages:</strong> Telugu (Native), English (Proficient), Hindi (Conversational)</li>
-      <li><strong>Interests:</strong> AI ethics, Productivity tools, Reading, Sports analytics, Open-source</li>
+      <li><strong>Interests:</strong> AI ethics, Productivity tools, Reading non-fiction, Sports analytics, Open-source contribution</li>
     </ul>
   </section>
 
   <footer>
     &copy; 2025 Yuvaraj Nagireddi. All rights reserved.
   </footer>
+
 </body>
 </html>
